Address C-style cast issues (#2996)

--- a/docs/code-quality/c26451.md
+++ b/docs/code-quality/c26451.md
@@ -1,24 +1,28 @@
 ---
 title: C26451
-keywords: C26451
-ms.date: 01/08/2017
+description: "Describes the causes of MSVC code analysis warning C26451, and shows how to fix it."
+ms.date: 07/15/2020
 ms.topic: "reference"
 f1_keywords: ["C26451"]
 helpviewer_keywords: ["C26451"]
 dev_langs: ["C++"]
 ---
-# Warning C26451: Arithmetic overflow: Using operator '%operator%' on a %size1% byte value and then casting the result to a %size2% byte value. Cast the value to the wider type before calling operator '%operator%' to avoid overflow
+# Warning C26451
 
-This warning indicates incorrect behavior that results from integral promotion rules and types larger than those in which arithmetic is typically performed.
+> Arithmetic overflow: Using operator '*operator*' on a *size-a* byte value and then casting the result to a *size-b* byte value. Cast the value to the wider type before calling operator '*operator*' to avoid overflow
 
-We detect when a narrow type integral value was shifted left, multiplied, added, or subtracted and the result of that arithmetic operation was cast to a wider type value. If the operation overflowed the narrow type value, then data is lost. You can prevent this loss by casting the value to a wider type before the arithmetic operation.
+This warning indicates incorrect behavior that results from integral promotion rules and types larger than the ones in which arithmetic is typically performed.
+
+## Remarks
+
+Code analysis detects when an integral value gets shifted left, multiplied, added, or subtracted, and the result gets cast to a wider integral type. If the operation overflows the narrower integral type, then data is lost. You can prevent this loss by casting the value to a wider type before the arithmetic operation.
 
 ## Example 1
 
 The following code generates this warning:
 
 ```cpp
-void leftshift(int i)
+void leftshift(int i) noexcept
 {
   unsigned __int64 x;
   x = i << 31;  // C26451 reported here
@@ -30,10 +34,10 @@ void leftshift(int i)
 To correct this warning, use the following code:
 
 ```cpp
-void leftshift(int i)
+void leftshift(int i) noexcept
 {
   unsigned __int64 x;
-  x = (unsigned __int64)i << 31; // OK
+  x = static_cast<unsigned __int64>(i) << 31; // OK
 
   // code
 }
@@ -42,28 +46,28 @@ void leftshift(int i)
 ## Example 2
 
 ```cpp
-void somefunc(__int64 y);
+void somefunc(__int64 /* y */) noexcept
+{}
 
-void callsomefunc(int x)
+void callsomefunc(int x) noexcept
 {
   somefunc(x * 2); // C26451 reported here
-
 }
 ```
 
 To correct this warning, use the following code:
 
 ```cpp
-void callsomefunc(int x)
+void callsomefunc(int x) noexcept
 {
-  somefunc((__int64)x * 2); // OK
+  somefunc(static_cast<__int64>(x) * 2); // OK
 }
 ```
 
 ## Example 3
 
 ```cpp
-__int64 add(int x)
+__int64 add(int x) noexcept
 {
   constexpr auto value = 2;
   return x += value; // C26451 reported here
@@ -73,10 +77,10 @@ __int64 add(int x)
 To correct this warning, use the following code:
 
 ```cpp
-__int64 add(int x)
+__int64 add(int x) noexcept
 {
   constexpr auto value = 2;
-  const __int64 y = (__int64)x + value; // OK
+  const __int64 y = static_cast<__int64>(x) + value; // OK
   return y;
 }
 ```
