--- a/docs/code-quality/c26452.md
+++ b/docs/code-quality/c26452.md
@@ -1,16 +1,18 @@
 ---
 title: C26452
-keywords: C26452
-ms.date: 01/08/2017
+description: "Describes causes of MSVC Code analysis warning C26452, and how to fix the issue."
+ms.date: 07/15/2020
 ms.topic: "reference"
 f1_keywords: ["C26452"]
 helpviewer_keywords: ["C26452"]
 dev_langs: ["C++"]
 ---
-# Arithmetic overflow: Left shift count is negative or greater than or equal to the operand size which is undefined behavior
+# Warning C26452
 
-This warning indicates shift count is negative or greater than or equal to the number of bits of the operand being shifted, resulting in undefined behavior.
-Note: C4293 is a similar check in the Microsoft C++ compiler.
+> Arithmetic overflow: Left shift count is negative or greater than or equal to the operand size, which is undefined behavior
+
+This warning indicates the shift count is negative, or greater than or equal to the number of bits in the shifted operand. Either case results in undefined behavior.
+C4293 is a similar check in the Microsoft C++ compiler.
 
 ## Example
 
@@ -26,7 +28,7 @@ To correct this warning, use the following code:
 ```cpp
 unsigned __int64 combine(unsigned lo, unsigned hi)
 {
-  return ((unsigned __int64)hi << 32) | lo; // OK
+  return (static_cast<unsigned __int64>(hi) << 32) | lo; // OK
 }
 ```
 
