--- a/docs/code-quality/c26453.md
+++ b/docs/code-quality/c26453.md
@@ -1,15 +1,17 @@
 ---
 title: C26453
-keywords: C26453
-ms.date: 01/08/2017
+description: "Describes the causes of MSVC code analysis warning C26453, and shows how to fix it."
+ms.date: 07/15/2020
 ms.topic: "reference"
 f1_keywords: ["C26453"]
 helpviewer_keywords: ["C26453"]
 dev_langs: ["C++"]
 ---
-# Warning C26453: Arithmetic overflow: Left shift of a negative signed number is undefined behavior
+# Warning C26453
 
-This warning indicates we are left shifting a negative signed integral value, which is a bad idea  and triggers implementation defined behavior.
+> Arithmetic overflow: Left shift of a negative signed number is undefined behavior
+
+This warning indicates the code left shifts a negative signed integral value, which is non-portable and triggers implementation defined behavior.
 
 ## Example
 
@@ -27,7 +29,7 @@ To correct this warning, use the following code:
 ```cpp
 void leftshift(int shiftCount)
 {
-  const auto result = ((unsigned)-1) << shiftCount; // OK
+  const auto result = static_cast<unsigned>(-1) << shiftCount; // OK
 
   // code
 }
