Add error C7626 tags

--- a/docs/error-messages/compiler-warnings/c5208.md
+++ b/docs/error-messages/compiler-warnings/c5208.md
@@ -1,17 +1,17 @@
 ---
-title: "Compiler Warning C5208"
+title: "Compiler Warning C5208, Error C7626"
 description: Compiler warning C5208 description and solution.
 ms.date: 07/17/2020
-f1_keywords: ["C5208"]
-helpviewer_keywords: ["C5208"]
+f1_keywords: ["C5208", "C7626"]
+helpviewer_keywords: ["C5208", "C7626"]
 ---
-# Compiler Warning (level 1) C5208
+# Compiler Warning (level 1) C5208 and Error C7626
 
 > unnamed class used in typedef name cannot declare members other than non-static data members, member enumerations, or member classes
 
 ## Remarks
 
-Unnamed classes within a `typedef` declaration can't have any members other than:
+Unnamed classes within a **`typedef`** declaration can't have any members other than:
 
 - non-static data members,
 - member classes,
@@ -30,7 +30,7 @@ To turn off the warning for an entire project in the Visual Studio IDE:
 
 1. Open the **Property Pages** dialog for your project. For information on how to use the Property Pages dialog, see [Property Pages](../../build/reference/property-pages-visual-cpp.md).
 1. Select the **Configuration Properties** > **C/C++** > **Advanced** page.
-1. Edit the **Disable Specific Warnings** property to add `5208`. Choose **OK** to apply your changes.
+1. Edit the **Disable Specific Warnings** property to add *`5208`*. Choose **OK** to apply your changes.
 
 ## Example
 
