--- a/docs/code-quality/c26820.md
+++ b/docs/code-quality/c26820.md
@@ -11,7 +11,7 @@ helpviewer_keywords: ["C26820"]
 
 For more information, see [P.9: Don't waste time or space](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#p9-dont-waste-time-or-space) in the C++ Core Guidelines.
 
-This check covers non-obvious and easy-to-miss behavior when assigning a reference to a variable marked `auto`. The type of the `auto` variable is resolved to a value rather than a reference, and an implicit copy is made.
+This check covers non-obvious and easy-to-miss behavior when assigning a reference to a variable marked **`auto`**. The type of the **`auto`** variable is resolved to a value rather than a reference, and an implicit copy is made.
 
 ## Remarks
 
