--- a/docs/code-quality/c6262.md
+++ b/docs/code-quality/c6262.md
@@ -8,13 +8,13 @@ ms.assetid: 3eddc74e-2b05-4159-a093-fd469fdcebbb
 ---
 # C6262
 
-> warning C6262: Function uses \<constant> bytes of stack: exceeds /analyze:stacksize\<constant 2>. Consider moving some data to heap
+> warning C6262: Function uses *constant1* bytes of stack: exceeds /analyze:stacksize *constant2*. Consider moving some data to heap
 
-This warning indicates that stack usage that exceeds a preset threshold (`constant 2`) has been detected in a function. The default stack frame size for this warning is 16 KB for user mode, 1 KB for kernel mode. Stack—even in user mode—is limited, and failure to commit a page of stack causes a stack overflow exception. Kernel mode has a 12 KB stack size limit, which cannot be increased; therefore, kernel-mode code should aggressively limit stack use.
+This warning indicates that stack usage that exceeds a preset threshold (*constant2*) has been detected in a function. The default stack frame size for this warning is 16 KB for user mode, 1 KB for kernel mode. Stack—even in user mode—is limited, and failure to commit a page of stack causes a stack overflow exception. Kernel mode has a 12 KB stack size limit, which cannot be increased; therefore, kernel-mode code should aggressively limit stack use.
 
-To correct the problem behind this warning, you can either move some data to the heap or to other dynamic memory.  In user mode, one large stack frame may not be a problem—and this warning may be suppressed—but a large stack frame increases the risk of a stack overflow. (A large stack frame might occur if the function uses the stack heavily or is recursive.) The total stack size in user mode can be increased if stack overflow actually occurs, but only up to the system limit.  You can use the **/analyze** command-line option to change the value for `<constant 2>`, but increasing it introduces a risk that an error will not be reported.
+To correct the problem behind this warning, you can either move some data to the heap or to other dynamic memory.  In user mode, one large stack frame may not be a problem—and this warning may be suppressed—but a large stack frame increases the risk of a stack overflow. (A large stack frame might occur if the function uses the stack heavily or is recursive.) The total stack size in user mode can be increased if stack overflow actually occurs, but only up to the system limit.  You can use the **`/analyze`** command-line option to change the value for *constant2*, but increasing it introduces a risk that an error will not be reported.
 
-For kernel-mode code—for example, in driver projects—the value of `<constant 2>` is set to 1 KB. Well-written drivers should have very few functions that approach this value, and changing the limit downward may be desirable.  The same general techniques that are used for user-mode code to reduce the stack size can be adapted to kernel-mode code.
+For kernel-mode code—for example, in driver projects—the value of *constant2* is set to 1 KB. Well-written drivers should have very few functions that approach this value, and changing the limit downward may be desirable.  The same general techniques that are used for user-mode code to reduce the stack size can be adapted to kernel-mode code.
 
 ## Example
 
@@ -61,24 +61,18 @@ void f( )
 }
 ```
 
-The use of malloc and free have many pitfalls in terms of memory leaks and exceptions. To avoid these kinds of leaks and exception problems altogether, use the mechanisms that are provided by the C++ Standard Template Library (STL). These include [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class), and [vector](/cpp/standard-library/vector). For more information, see [Smart Pointers](/cpp/cpp/smart-pointers-modern-cpp) and [C++ Standard Library](/cpp/standard-library/cpp-standard-library-reference).
+The use of `malloc` and `free` have many pitfalls in terms of memory leaks and exceptions. To avoid these kinds of leaks and exception problems altogether, use the mechanisms that are provided by the C++ Standard Template Library (STL). These include [`shared_ptr`](/cpp/standard-library/shared-ptr-class), [`unique_ptr`](/cpp/standard-library/unique-ptr-class), and [`vector`](/cpp/standard-library/vector). For more information, see [Smart Pointers](/cpp/cpp/smart-pointers-modern-cpp) and [C++ Standard Library](/cpp/standard-library/cpp-standard-library-reference).
 
-**To correct this warning by adjusting the stack size**
+### To correct this warning by adjusting the stack size
 
 1. On the menu bar, choose **Project** > **Properties**.
 
-     The **Property Pages** dialog box is displayed.
+1. In the **Property Pages** dialog box, select the **Configuration Properties** > **C/C++** > **Command Line** property page.
 
-2. Expand **Configuration Properties**.
-
-3. Expand **C/C++**.
-
-4. Select **Command Line** properties.
-
-5. In **Additional options**, add **/analyze:stacksize16388**.
+1. In **Additional options**, add *`/analyze:stacksize32768`*.
 
 ## See also
 
-- [/STACK (Stack Allocations)](/cpp/build/reference/stack-stack-allocations)
-- [_resetstkoflw](/cpp/c-runtime-library/reference/resetstkoflw)
+- [`/STACK` (Stack Allocations)](/cpp/build/reference/stack-stack-allocations)
+- [`_resetstkoflw`](/cpp/c-runtime-library/reference/resetstkoflw)
 - [How to: Use Native Run-Time Checks](/visualstudio/debugger/how-to-use-native-run-time-checks)
