--- a/docs/code-quality/c26474.md
+++ b/docs/code-quality/c26474.md
@@ -10,18 +10,18 @@ ms.assetid: 1e23a8e6-97fa-47f5-a279-b52aa2efafa4
 
 "Don't cast between pointer types when the conversion could be implicit."
 
-**C++ Core Guidelines**:
+**C++ Core Guidelines**:\
 Type.1: Avoid casts
 
 In some cases, implicit casts between pointer types are safe and don't require you to write a specific cast expression. This rule finds instances of unnecessary casts you can safely remove.
 
 ## Remarks
 
-The rule ID should be interpreted as "Implicit cast isn't used where it's acceptable."
+The rule ID should be interpreted as "An implicit cast isn't used where it's acceptable."
 
 This rule is only applicable to pointers. It checks static casts and reinterpret casts.
 
-These cases are acceptable pointer conversions that should not use explicit cast expressions:
+These cases are acceptable pointer conversions that shouldn't use explicit cast expressions:
 - conversion to `nullptr_t`;
 - conversion to `void*`;
 - conversion from a derived type to its base when invoking a base member function that's not hidden by the derived type. 
