Add C++ Core Guidelines link to C26411

--- a/docs/code-quality/c26411.md
+++ b/docs/code-quality/c26411.md
@@ -8,7 +8,7 @@ ms.assetid: 5134e51e-8b92-4ee7-94c3-022e318a0e24
 ---
 # C26411  NO_REF_TO_UNIQUE_PTR
 
-Passing a unique pointer by reference assumes that its resource may be released or transferred inside of a target function. If function uses its parameter only to access the resource, it is safe to pass a raw pointer or a reference.
+Passing a unique pointer by reference assumes that its resource may be released or transferred inside of a target function. If function uses its parameter only to access the resource, it is safe to pass a raw pointer or a reference. For additional information, see [C++ Core Guidelines rule R.33](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r33-take-a-unique_ptrwidget-parameter-to-express-that-a-function-reseats-thewidget): *Take a unique_ptr\<widget\>& parameter to express that a function reseats the widget*.
 
 ## Remarks
 
