--- a/docs/code-quality/c26415.md
+++ b/docs/code-quality/c26415.md
@@ -11,7 +11,7 @@ ms.assetid: 4165f70a-78ae-4a03-b256-c4bd74b02d09
 "Smart pointer parameter is used only to access contained pointer. Use T* or T& instead."
 
 **C++ Core Guidelines**:
-R.30: Take smart pointers as parameters only to explicitly express lifetime semantics
+[R.30](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r30-take-smart-pointers-as-parameters-only-to-explicitly-express-lifetime-semantics): Take smart pointers as parameters only to explicitly express lifetime semantics
 
 Using a smart pointer type to pass data to a function indicates that the target function needs to manage the lifetime of the contained object. However, if the function only uses the smart pointer to access the contained object and never actually calls any code that may lead to its deallocation (that is, never affect its lifetime), there is usually no need to complicate the interface with smart pointers. A plain pointer or reference to the contained object is preferred.
 
