Add C++ Core Guidelines link to C26416
The rule was already written in the description, so I added a link to the documentation.

--- a/docs/code-quality/c26416.md
+++ b/docs/code-quality/c26416.md
@@ -11,7 +11,7 @@ ms.assetid: f158207b-45cf-44cf-8e4b-b5b75b56ea0e
 > Shared pointer parameter is passed by rvalue reference. Pass by value instead.
 
 **C++ Core Guidelines**:
-R.34: Take a shared_ptr\<widget> parameter to express that a function is part owner
+[R.34](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r34-take-a-shared_ptrwidget-parameter-to-express-that-a-function-is-part-owner): Take a shared_ptr\<widget> parameter to express that a function is part owner
 
 Passing a shared pointer by rvalue reference is usually unnecessary. Unless it is an implementation of move semantics for a shared pointer type itself, shared pointer objects can be safely passed by value. Using rvalue reference may be also an indication that unique pointer is more appropriate since it clearly transfers unique ownership from caller to callee.
 
