Add C++ Core Guidelines link to C26417
The rule was already written in the description, so I added a link to the documentation.

--- a/docs/code-quality/c26417.md
+++ b/docs/code-quality/c26417.md
@@ -11,7 +11,7 @@ ms.assetid: 0e09fcc6-f9eb-4404-b51e-5815705c6afb
 > Shared pointer parameter is passed by reference and not reset or reassigned. Use T* or T& instead.
 
 **C++ Core Guidelines**:
-R.35: Take a shared_ptr\<widget>& parameter to express that a function might reseat the shared pointer
+[R.35](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r35-take-a-shared_ptrwidget-parameter-to-express-that-a-function-might-reseat-the-shared-pointer): Take a shared_ptr\<widget>& parameter to express that a function might reseat the shared pointer
 
 Passing shared pointers by reference may be useful in scenarios where callee code updates target of the smart pointer object and its caller expects to see such update. Using a reference solely to reduce costs of passing a shared pointer is questionable. If callee code only accesses target object and never manages its lifetime, it is safer to pass raw pointer or reference, rather than to expose resource management details.
 
