--- a/docs/code-quality/c26426.md
+++ b/docs/code-quality/c26426.md
@@ -11,7 +11,7 @@ ms.assetid: 6fb5f6d2-b097-47f8-8b49-f2fd4e9bef0e
 "Global initializer calls a non-constexpr function."
 
 **C++ Core Guidelines**:
-I.22: Avoid complex initialization of global objects
+[I.22](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#i22-avoid-complex-initialization-of-global-objects): Avoid complex initialization of global objects
 
 The order of execution of initializers for global objects may be inconsistent or undefined. This can lead to issues that are hard to reproduce and investigate. To avoid such problems, global initializers should not depend on external code that's executed at run time and can potentially depend on data that's not yet initialized. This rule flags cases where global objects call functions to obtain their initial values.
 
