--- a/docs/code-quality/c26427.md
+++ b/docs/code-quality/c26427.md
@@ -11,7 +11,7 @@ ms.assetid: 8fb95a44-8704-45b1-bc55-eccd59b1db2f
 "Global initializer accesses extern object."
 
 **C++ Core Guidelines**:
-I.22: Avoid complex initialization of global objects
+[I.22](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#i22-avoid-complex-initialization-of-global-objects): Avoid complex initialization of global objects
 
 Global objects may be initialized in an inconsistent or undefined order, which means that interdependency between them is risky and should be avoided. This guideline is applicable when initializers refer to another object that's considered to be **`extern`**.
 
