Date, style updates

--- a/docs/code-quality/c26498.md
+++ b/docs/code-quality/c26498.md
@@ -1,6 +1,6 @@
 ---
 title: C26498
-ms.date: 03/22/2018
+ms.date: 08/18/2020
 ms.topic: reference
 f1_keywords: ["C26498"]
 helpviewer_keywords: ["C26498"]
@@ -9,22 +9,27 @@ helpviewer_keywords: ["C26498"]
 
 This rule helps to enforce Con.5 from the [C++ Core Guidelines](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con5-use-constexpr-for-values-that-can-be-computed-at-compile-time): use constexpr for values that can be computed at compile time. 
 
-The warning is triggered by assigning the result of a constexpr function to any non-constexpr variable whose value doesn't change after the initial assignment.
+## Remarks
 
-# Example
+The warning is triggered by assigning the result of a **`constexpr`** function to any non-**`constexpr`** variable whose value doesn't change after the initial assignment.
+
+## Example
+
+This sample code shows where C26498 may appear, and how to avoid it:
+
 ```cpp
 constexpr int getMyValue()
 {
-  return 1;
+    return 1;
 }
 
 void foo()
 {
-  constexpr int val0 = getMyValue(); // no C26498
-  const int val1 = getMyValue();     // C26498, C26814
-  int val2 = getMyValue();           // C26498, value is never modified
-  int val3 = getMyValue();           // no C26498, val3 is assigned to below.
-  val3 = val3 * val2;
+    constexpr int val0 = getMyValue(); // no C26498
+    const int val1 = getMyValue();     // C26498, C26814
+    int val2 = getMyValue();           // C26498, value is never modified
+    int val3 = getMyValue();           // no C26498, val3 is assigned to below.
+    val3 = val3 * val2;
 }
 ```
 
