--- a/docs/code-quality/c26411.md
+++ b/docs/code-quality/c26411.md
@@ -1,6 +1,6 @@
 ---
 title: C26411
-ms.date: 11/15/2017
+ms.date: 08/19/2020
 ms.topic: "conceptual"
 f1_keywords: ["C26411"]
 helpviewer_keywords: ["C26411"]
@@ -14,7 +14,7 @@ When you pass a unique pointer to a function by reference, it implies that its r
 
 - The limitations from the warning [C26410](C26410.md) are also applicable here.
 
-- The heuristic to detect `release` or `reset` access to the unique pointer is naive. We only detect calls to assignment operators and to functions named `reset` (case-insensitive). Obviously, this detection doesn't cover all possible cases of smart pointer modifications. (For example, it doesn't detect `std::swap`, or any special non-**`const`** function in a custom smart pointer). We expect this warning may produce many false positives on custom types, and in some scenarios dealing with standard unique pointers. The heuristic will be improved as we implement more checks focused on smart pointers.
+- The heuristic to detect `release` or `reset` access to the unique pointer is naive. We only detect calls to assignment operators and to functions named `reset` (case-insensitive). Obviously, this detection doesn't cover all possible cases of smart pointer modifications. (For example, it doesn't detect `std::swap`, or any special non-**`const`** function in a custom smart pointer). We expect this warning may produce many false positives on custom types, and in some scenarios dealing with standard unique pointers. We expect to improve the heuristic as we implement more checks focused on smart pointers.
 
 - The fact that smart pointers are often templates brings an interesting limitation. The compiler isn't required to process template code in templates if it's not used. In code that makes limited use of smart pointer interfaces, the checker may produce unexpected results. The checker can't properly identify semantics of the template type, because some functions may never get used. For the standard `std::unique_ptr`, this limitation is mitigated by recognizing the type's name. This may be extended in future to cover more well-known smart pointers.
 
