--- a/docs/code-quality/c26431.md
+++ b/docs/code-quality/c26431.md
@@ -12,7 +12,7 @@ ms.assetid: 40be6032-c8de-49ab-8e43-e8eedc0ca0ba
 "The type of expression is already gsl::not_null. Do not test it for nullness."
 
 **C++ Core Guidelines**:
-F.23: Use a not_null\<T> to indicate that "null" is not a valid value
+[F.23](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f23-use-a-not_nullt-to-indicate-that-null-is-not-a-valid-value): Use a not_null\<T> to indicate that "null" is not a valid value
 
 The marker type gsl::not_null from Guidelines Support Library is used to clearly indicate values that are never null pointers. It causes a hard failure if such assumption is not held at run time. So, obviously, there is no need to check for nullness if expression evaluates to a result of type gsl::not_null.
 
