Add C++ Core Guidelines link to C26430

--- a/docs/code-quality/c26430.md
+++ b/docs/code-quality/c26430.md
@@ -12,7 +12,7 @@ ms.assetid: 3dca2626-8102-4eed-8ff3-73eb3d5c328c
 "Symbol is not tested for nullness on all paths."
 
 **C++ Core Guidelines**:
-F.23: Use a not_null\<T> to indicate that "null" is not a valid value
+[F.23](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f23-use-a-not_nullt-to-indicate-that-null-is-not-a-valid-value): Use a not_null\<T> to indicate that "null" is not a valid value
 
 If code ever checks nullness of pointer variables it should do this consistently and validate pointers on all paths. Sometimes overaggressive checking for nullness is still better than possibility of a hard crash in one of the complicated branches. Ideally such code should be refactored to be less complex (by splitting into multiple functions) and to rely on markers like gsl::not_null (see Guidelines Support Library) to isolate parts of algorithm that can make safe assumption about valid pointer values. The rule TEST_ON_ALL_PATHS helps to find places where nullness checks are either inconsistent (hence assumptions may require review) or actual bugs where potential null value can bypass nullness check in some of the code paths.
 
