--- a/docs/code-quality/c26438.md
+++ b/docs/code-quality/c26438.md
@@ -12,7 +12,7 @@ ms.assetid: c7b3f59c-fb2f-4816-bda4-0fad23c80d83
 "Avoid **`goto`**."
 
 **C++ Core Guidelines**:\
-ES.76: Avoid goto
+[ES.76](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#es76-avoid-goto): Avoid goto
 
 The use of **`goto`** is widely considered a dangerous and error-prone practice. It's acceptable only in generated code, such as in a parser generated from a grammar. With modern C++ features and utilities provided by the Guidelines Support Library, it should be easy to avoid **`goto`** altogether.
 
