Add C++ Core Guidelines link to C26441

--- a/docs/code-quality/c26441.md
+++ b/docs/code-quality/c26441.md
@@ -12,7 +12,7 @@ ms.assetid: f923c422-ed01-4644-b40b-93f15fc5bb93
 "Guard objects must be named."
 
 **C++ Core Guidelines**:
-CP.44: Remember to name your lock_guards and unique_locks
+[CP.44](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#cp44-remember-to-name-your-lock_guards-and-unique_locks): Remember to name your lock_guards and unique_locks
 
 The standard library provides a few useful classes which help to control concurrent access to resources. Objects of such types lock exclusive access for the duration of their lifetime. This implies that every lock object must be named, i.e. have clearly defined lifetime which spans through the period in which access operations are executed. So, failing to assign a lock object to a variable is a mistake which is effectively disables locking mechanism (because temporary variables are transient). This rule tries to catch simple cases of such unintended behavior.
 
