Add C++ Core Guidelines link to C26473

--- a/docs/code-quality/c26473.md
+++ b/docs/code-quality/c26473.md
@@ -12,7 +12,7 @@ ms.assetid: d88aaa57-0003-421f-8377-4e6a5c27f2df
 "Don't cast between pointer types where the source type and the target type are the same."
 
 **C++ Core Guidelines**:
-Type.1: Avoid casts
+[Type.1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#prosafety-type-safety-profile): Avoid casts
 
 This rule helps to remove unnecessary or suspicious casts. Obviously, when type is converted to itself, such conversion is ineffective, yet the fact that the cast is used may indicate subtle design issue or a potential for regression if types change in future. It is always safer to use as few casts as possible.
 
