--- a/docs/code-quality/c26474.md
+++ b/docs/code-quality/c26474.md
@@ -11,7 +11,7 @@ ms.assetid: 1e23a8e6-97fa-47f5-a279-b52aa2efafa4
 "Don't cast between pointer types when the conversion could be implicit."
 
 **C++ Core Guidelines**:\
-Type.1: Avoid casts
+[Type.1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#prosafety-type-safety-profile): Avoid casts
 
 In some cases, implicit casts between pointer types are safe and don't require you to write a specific cast expression. This rule finds instances of unnecessary casts you can safely remove.
 
