--- a/docs/code-quality/c26475.md
+++ b/docs/code-quality/c26475.md
@@ -11,7 +11,7 @@ ms.assetid: 4ed71cf8-f155-4961-b4fe-77feb3b880c3
 "Do not use function style C-casts."
 
 **C++ Core Guidelines**:
-ES.49: If you must use a cast, use a named cast
+[ES.49](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#es49-if-you-must-use-a-cast-use-a-named-cast): If you must use a cast, use a named cast
 
 Function-style casts (for example, `int(1.1)`) are another incarnation of C-style casts (like `(int)1.1`), which have questionable safety. Specifically, the compiler doesn’t try to check if any data loss can occur either in C-casts or in function casts. In both cases, it's better either to avoid casting or to use brace initializer if possible. If neither works, static casts may be suitable, but it is still better to use utilities from the Guidelines Support Library:
 
