--- a/docs/code-quality/c26402.md
+++ b/docs/code-quality/c26402.md
@@ -9,3 +9,27 @@ ms.assetid: b9d3d398-697a-4a5d-8bfe-9c667dffb90b
 # C26402 DONT_HEAP_ALLOCATE_MOVABLE_RESULT
 
 To avoid confusion about whether a pointer owns an object, a function that returns a movable object should allocate it on the stack and return it by value instead of returning a heap-allocated object. If pointer semantics are required, then return a smart pointer instead of a raw pointer. See [C++ Core Guidelines R.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rr-ptr): *Warn if a function returns an object that was allocated within the function but has a move constructor. Suggest considering returning it by value instead.*
+
+# Example
+```cpp
+struct S
+{
+  S() = default;
+  S(S&& s) = default;
+};
+
+S* foo()
+{
+  S* s = new S(); // C26409, avoid explicitly calling new.
+  // ... 
+  return s; // C26402
+}
+
+// Prefer returning objects with move contructors by value instead of unnecessarily heap-allocating the object.
+S bar()
+{
+  S s;
+  // ...
+  return s;
+}
+```
