Add example for C26409

--- a/docs/code-quality/c26409.md
+++ b/docs/code-quality/c26409.md
@@ -18,3 +18,15 @@ The ultimate fix is to start using smart pointers with appropriate factory funct
 ## Remarks
 
 - The checker warns on calls to any kind of operator **`new`** or **`delete`**: scalar, vector, overloaded versions (global and class-specific), as well as on placement versions. The latter case may require some clarifications on the Core Guidelines in terms of suggested fixes and may be omitted in the future.
+
+# Example
+```cpp
+
+void f(int i)
+{
+  int* arr = new int[i]{}; // C26409, warning is issued for all new calls
+  delete[] arr;            // C26409, warning is issued for all delete calls
+  
+  auto unique = std::make_unique<int[]>(i); // prefer using smart pointers over new and delete
+} 
+```
