Add example for C26432

--- a/docs/code-quality/c26432.md
+++ b/docs/code-quality/c26432.md
@@ -26,3 +26,28 @@ Special operations like constructors are assumed to alter behavior of types so t
 - The rule doesn't check if operations are defined in the same way. It's okay to mix deleted and defaulted operations with explicitly defined ones. However, you must specify all of them if you specify any of them.
 - Access levels aren't important and can also be mixed.
 - The warning flags the first non-static function definition of a type, once per type.
+
+# Examples
+```cpp
+namespace warning
+{
+  struct S
+  {
+    S(){}
+    ~S(){} // C26432 because only the constructor and destructor are explicitly defined.
+  };
+}
+
+namespace no_warning
+{
+  struct S
+  {
+    S(){}
+    S(const S& s) = default;
+    S(S&& s) = default;
+    S& operator=(const S& s) = default;
+    S& operator=(S&& s) = default;
+    ~S(){}
+  }
+}
+```
