Add example for C26434

--- a/docs/code-quality/c26434.md
+++ b/docs/code-quality/c26434.md
@@ -25,3 +25,21 @@ Introducing a function which has the same name as a non-virtual function in a ba
 ## See also
 
 [C.128: Virtual functions should specify exactly one of virtual, override, or final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
+
+# Example
+```
+struct Base
+{
+    virtual void foo() = 0;
+};
+
+struct Derived_1 : Base
+{
+    virtual void foo() override {} // C26434, virtual is not needed here.
+};
+
+struct Derived_2 : Base
+{
+    void foo() override {}
+};
+```
