Add an example for C26446

--- a/docs/code-quality/c26446.md
+++ b/docs/code-quality/c26446.md
@@ -23,3 +23,21 @@ This rule helps to find places where potentially unchecked access is performed v
   - The rule doesn’t warn on calls to standard `at()` functions. These functions are safe and replacing them with `gsl::at()` would not bring much value.
 - Indexing into `std::basic_string_view<>` is not safe, so a warning is issued. The standard string view can be replaced by `gsl::basic_string_span<>`, which is always bounds-checked.
 - The implementation doesn’t consider range checks that user code may have somewhere in loops or branches. Accuracy here is traded for performance. In general, explicit range checks can often be replaced with more reliable iterators or more concise enhanced for-loops.
+
+# Example
+```cpp
+#include <vector>
+#include <gsl/gsl_util>
+#include <iostream>
+
+void fn()
+{
+  std::vector v{1, 2, 3, 4, 5};
+  
+  // Normal bracket operators do not prevent you from accessing memory out of bounds.
+  std::cout << v[5] << '\n';  // C26446, prefer using gsl::at instead of using operator[]. 
+  
+  // gsl::at prevents accessing memory out of bounds and invokes std::terminate on access.
+  std::cout << gsl::at(v, 5) << '\n'; 
+}
+```
