Fix example description

--- a/docs/code-quality/c26434.md
+++ b/docs/code-quality/c26434.md
@@ -27,7 +27,7 @@ In the Core Guidelines checks:
 
 ## Example
 
-This example demonstrates good engineering practice for explicit **`override`** and **`virtual`** use:
+This example demonstrates how a derived class can hide non-virtual functions, and how virtual functions allow both overloads and overrides:
 
 ```cpp
 // C26434.cpp
