Adding example to C26447
Updated the page with the example from the C++ Core Guidelines.

--- a/docs/code-quality/c26447.md
+++ b/docs/code-quality/c26447.md
@@ -18,3 +18,19 @@ This rule amends another rule, [C26440 DECLARE_NOEXCEPT](c26440.md), which tries
 - The rule focuses only on function calls. It flags targets that are not **`constexpr`** and that can potentially throw exceptions; in other words they are not marked explicitly as non-throwing by using **`noexcept`**, **`__declspec(nothrow)`**, **throw()**.
 - The compiler-generated target functions are skipped to reduce noise since exception specifications are not always provided by the compiler.
 - The checker also skips special kinds of target functions that are expected to be implemented as **`noexcept`**; this rule is enforced by [C26439 SPECIAL_NOEXCEPT](c26439.md).
+
+# Example
+```cpp
+#include <vector>
+#include <string>
+#include <istream>
+
+std::vector<std::string> collect(std::istream& is) noexcept 
+{
+    std::vector<std::string> res;
+    for (std::string s; is >> s;) // C26447, `operator bool()` can  throw, std::string's allocator can throw
+        res.push_back(s);         // C26447, `push_back` can throw
+    return res;
+}
+```
+You can fix these warnings by removing noexcept from the function signature.
