--- a/docs/code-quality/c6242.md
+++ b/docs/code-quality/c6242.md
@@ -1,6 +1,7 @@
 ---
 title: C6242
-ms.date: 11/04/2016
+description: "Describes Microsoft C/C++ compiler warning C6242."
+ms.date: 08/24/2020
 ms.topic: reference
 f1_keywords: ["C6242"]
 helpviewer_keywords: ["C6242"]
@@ -10,11 +11,11 @@ ms.assetid: 523d46ce-8370-434c-a752-2e3a18cca9a5
 
 > warning C6242: A jump out of this try-block forces local unwind. Incurs severe performance penalty
 
-This warning indicates that a jump statement causes control-flow to leave the protected block of a try-finally other than by fall-through.
+This warning indicates that a jump statement causes control-flow to leave the protected block of a `try-finally` other than by fall-through.
 
-Leaving the protected block of a try-finally other than by falling through from the last statement requires local unwind to occur. Local unwind typically requires approximately 1000 machine instructions; therefore, it is detrimental to performance.
+Leaving the protected block of a `try-finally` other than by falling through from the last statement requires local unwind to occur. Local unwind typically requires approximately 1000 machine instructions, so it's detrimental to performance.
 
-Use **`__leave** to exit the protected block of a try-finally.
+Use **`__leave`** to exit the protected block of a try-finally.
 
 ## Example
 
@@ -44,7 +45,7 @@ int f( )
 }
 ```
 
-To correct this warning, use **`__leave** as shown in the following code:
+To correct this warning, use **`__leave`** as shown in the following code:
 
 ```cpp
 #include <malloc.h>
@@ -74,8 +75,9 @@ int f()
 }
 ```
 
-The use of malloc and free have many pitfalls in terms of memory leaks and exceptions. To avoid these kinds of leaks and exception problems altogether, use the mechanisms that are provided by the C++ Standard Template Library (STL). These include [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class), and [vector](/cpp/standard-library/vector). For more information, see [Smart Pointers](/cpp/cpp/smart-pointers-modern-cpp) and [C++ Standard Library](/cpp/standard-library/cpp-standard-library-reference).
+The use of `malloc` and `free` have many pitfalls in terms of memory leaks and exceptions. To avoid these kinds of leaks and exception problems altogether, use the mechanisms that are provided by the C++ Standard Library. These include [`shared_ptr`](/cpp/standard-library/shared-ptr-class), [`unique_ptr`](/cpp/standard-library/unique-ptr-class), and [`vector`](/cpp/standard-library/vector). For more information, see [Smart pointers](/cpp/cpp/smart-pointers-modern-cpp) and [C++ Standard Library](/cpp/standard-library/cpp-standard-library-reference).
 
 ## See also
 
-[try-finally Statement](/cpp/cpp/try-finally-statement)
+[`try-except` statement](/cpp/cpp/try-except-statement)\
+[`try-finally` statement](/cpp/cpp/try-finally-statement)
