--- a/docs/code-quality/c26447.md
+++ b/docs/code-quality/c26447.md
@@ -19,7 +19,7 @@ This rule amends another rule, [C26440 DECLARE_NOEXCEPT](c26440.md), which tries
 - The compiler-generated target functions are skipped to reduce noise since exception specifications are not always provided by the compiler.
 - The checker also skips special kinds of target functions that are expected to be implemented as **`noexcept`**; this rule is enforced by [C26439 SPECIAL_NOEXCEPT](c26439.md).
 
-# Example
+## Example
 ```cpp
 #include <vector>
 #include <string>
