--- a/docs/code-quality/c26465.md
+++ b/docs/code-quality/c26465.md
@@ -8,3 +8,11 @@ helpviewer_keywords: ["C26465"]
 # C26465 NO_CONST_CAST_UNNECESSARY
 
 Don't use `const_cast` to cast away `const`. `const_cast` is not required; constness or volatility is not being removed by this conversion. See [C++ Core Guidelines Type.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-constcast).
+
+## Example
+```cpp
+void function(int* const constPtrToInt)
+{
+  auto p = const_cast<int*>(constPtrToInt); // C26465, const is not being removed
+}
+```
