--- a/docs/code-quality/c26466.md
+++ b/docs/code-quality/c26466.md
@@ -8,3 +8,29 @@ helpviewer_keywords: ["C26466"]
 # C26466 NO_STATIC_DOWNCAST_POLYMORPHIC
 
 Don't use `static_cast` downcasts. A cast from a polymorphic type should use dynamic_cast. See [C++ Core Guidelines Type.2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-downcast).
+
+## Example
+```cpp
+struct Base {
+    virtual ~Base();
+};
+
+struct Derived : Base {};
+
+void bad(Base* pb)
+{
+    Derived* test = static_cast<Derived*>(pb); // C26466
+}
+
+void good(Base* pb)
+{
+    if (Derived* pd = dynamic_cast<Derived*>(pb)) 
+    {
+        // ... do something with Derived*
+    }
+    else 
+    {
+        // ... do something with Base*
+    }
+}
+```
