--- a/docs/code-quality/c26471.md
+++ b/docs/code-quality/c26471.md
@@ -8,3 +8,16 @@ helpviewer_keywords: ["C26471"]
 # C26471 NO_REINTERPRET_CAST_FROM_VOID_PTR
 
 Don't use `reinterpret_cast`. A cast from void* can use `static_cast`. See [C++ Core Guidelines Type.1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-reinterpretcast).
+
+## Example
+```cpp
+void function(void* pValue) 
+{
+    {
+        int* pointerToInt = reinterpret_cast<int*>(pValue); // C26471, use static_cast instead
+    }
+    {
+        int* pointerToInt = static_cast<int*>(pValue); // Good
+    }
+}
+```
