--- a/docs/code-quality/c26466.md
+++ b/docs/code-quality/c26466.md
@@ -4,10 +4,14 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26466"]
 helpviewer_keywords: ["C26466"]
+description: CppCoreCheck rule that enforces C++ Core Guidelines Type.2
 ---
 # C26466 NO_STATIC_DOWNCAST_POLYMORPHIC
 
-Don't use `static_cast` downcasts. A cast from a polymorphic type should use dynamic_cast. See [C++ Core Guidelines Type.2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-downcast).
+Don't use `static_cast` downcasts. A cast from a polymorphic type should use dynamic_cast. 
+
+## See also
+[C++ Core Guidelines Type.2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Pro-type-downcast)
 
 ## Example
 ```cpp
