Add example to C26492

--- a/docs/code-quality/c26492.md
+++ b/docs/code-quality/c26492.md
@@ -4,7 +4,20 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26492"]
 helpviewer_keywords: ["C26492"]
+description: CppCoreCheck rule that enforces C++ Core Guidelines Type.3
 ---
 # C26492 NO_CONST_CAST
 
-Don't use `const_cast` to cast away `const`. See [C++ Core Guidelines Type.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+Don't use `const_cast` to cast away `const`. 
+
+## See also
+[C++ Core Guidelines Type.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+
+## Example
+
+```cpp
+void function(const int* constIntPtr)
+{
+    int* intPtr = const_cast<int*>(constIntPtr); // C26492, Do not use const_cast to cast away const
+}
+```
