Add example to C26494

--- a/docs/code-quality/c26494.md
+++ b/docs/code-quality/c26494.md
@@ -7,4 +7,16 @@ helpviewer_keywords: ["C26494"]
 ---
 # C26494 VAR_USE_BEFORE_INIT
 
-Variable '%variable%' is uninitialized. Always initialize an object. See [C++ Core Guidelines Type.5](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+Variable '%variable%' is uninitialized. Always initialize an object. 
+## See also
+[C++ Core Guidelines Type.5](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+
+## Example
+```cpp
+#include <iostream>
+void function()
+{
+    int myVal; // C26494, Variable is uninitialized
+    std::cout << myVal; // C6001
+}
+```
