--- a/docs/code-quality/c26408.md
+++ b/docs/code-quality/c26408.md
@@ -20,7 +20,7 @@ This warning flags places where `malloc` or `free` is invoked explicitly in acco
 ## See also
 [C++ Core Guidelines R.10](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r10-avoid-malloc-and-free)
 
-# Example
+## Example
 ```cpp
 #include <new>
 
