Add description and example to C26460

--- a/docs/code-quality/c26460.md
+++ b/docs/code-quality/c26460.md
@@ -4,7 +4,34 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26460"]
 helpviewer_keywords: ["C26460"]
+description: CppCoreCheck rule that enforces C++ Core Guidelines Con.3
 ---
 # C26460 USE_CONST_REFERENCE_ARGUMENTS
+The reference argument '%argument%' for function '%function%' can be marked as `const` (con.3). 
 
-  The reference argument '%argument%' for function '%function%' can be marked as `const`. See [C++ Core Guidelines con.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rconst-ref).
+Passing an object by reference indicates that the function has the potential modify the object. If that is not the intent of the function, it is better to mark the argument as a const reference.  
+
+## See also 
+[C++ Core Guidelines con.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rconst-ref).
+
+## Example
+```cpp
+struct MyStruct
+{
+    void MemberFn1() const;
+    void MemberFn2();
+};
+
+
+void Function1_Helper(const MyStruct&);
+void Function1(MyStruct& myStruct) // C26460, see comments below.
+{
+    myStruct.MemberFn1();       // The member function is marked as const
+    Function1_Helper(myStruct); // Function1_Helper takes a const reference
+}
+
+void Function2(MyStruct& myStruct)
+{
+    myStruct.MemberFn2(); // MemberFn2 is non-const and has the potential to modify data
+}
+```
