Add description and example to C26461

--- a/docs/code-quality/c26461.md
+++ b/docs/code-quality/c26461.md
@@ -4,7 +4,40 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26461"]
 helpviewer_keywords: ["C26461"]
+description: CppCoreCheck rule that enforces C++ Core Guidelines con.3
 ---
 # C26461 USE_CONST_POINTER_ARGUMENTS:
 
-The pointer argument '%argument%' for function '%function%' can be marked as a pointer to `const`. See [C++ Core Guidelines con.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rconst-ref).
+The pointer argument '%argument%' for function '%function%' can be marked as a pointer to `const` (con.3). 
+
+A function with a `T*` argument has the potential to modify the value of the object. If that is not the intent of the function, it is better to make the pointer a `const T*` instead.
+
+## See also 
+[C++ Core Guidelines con.3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rconst-ref).
+
+## Example
+```cpp
+struct MyStruct
+{
+    void MemberFn1() const;
+    void MemberFn2();
+};
+
+void Function1_Helper(const MyStruct* myStruct);
+void Function1(MyStruct* myStruct) // C26461, neither of the operations on myStruct would modify the pointer's value.
+{
+    if (!myStruct) 
+        return;
+
+    myStruct->MemberFn1();      // The member function is const
+    Function1_Helper(myStruct); // Function1_Helper takes a const
+}
+
+void Function2(MyStruct* myStruct)
+{
+    if (!myStruct) 
+        return;
+
+    myStruct->MemberFn2(); // The member function is non-const, so no C26461 will be issued
+}
+```
