Add description and example to C26462

--- a/docs/code-quality/c26462.md
+++ b/docs/code-quality/c26462.md
@@ -4,7 +4,26 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26462"]
 helpviewer_keywords: ["C26462"]
+description: CppCoreCheck rule that enforces C++ Core Guidelines Con.4
 ---
 # C26462 USE_CONST_POINTER_FOR_VARIABLE
 
-The value pointed to by '%variable%' is assigned only once, mark it as a pointer to `const`. See [C++ Core Guidelines con.4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con4-use-const-to-define-objects-with-values-that-do-not-change-after-construction).
+The value pointed to by '%variable%' is assigned only once, mark it as a pointer to `const` (con.4). 
+
+Pointers to variables whose values remain unchanged should be marked as const.
+
+## See also
+[C++ Core Guidelines con.4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con4-use-const-to-define-objects-with-values-that-do-not-change-after-construction).
+
+## Example
+```cpp
+void useVal(int val);
+
+void function1(int* ptr)
+{
+    int* p = ptr; // C26462, the value pointed to by p is unmodified
+    ptr = nullptr;
+
+    useVal(*p);
+}
+```
