--- a/docs/code-quality/c26497.md
+++ b/docs/code-quality/c26497.md
@@ -4,7 +4,21 @@ ms.date: 03/22/2018
 ms.topic: reference
 f1_keywords: ["C26497"]
 helpviewer_keywords: ["C26497"]
+description: CppCoreCheck rule that enforces C++ Core Guidelines F.4
 ---
 # C26497 USE_CONSTEXPR_FOR_FUNCTION
 
-This function %function% could be marked `constexpr` if compile-time evaluation is desired. See [C++ Core Guidelines F.4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rf-constexpr).
+This function %function% could be marked `constexpr` if compile-time evaluation is desired (f.4).  
+
+## See also
+[C++ Core Guidelines F.4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rf-constexpr).
+
+## Example
+```cpp
+const int GetTheAnswer(int x) noexcept { return 42 + x; } // Could be marked constexpr
+
+void function1() noexcept
+{
+    const int theAnswer = GetTheAnswer(0);
+}
+```
