VC Code Analysis - add help docs for new rules added.

--- a/docs/code-quality/c33001.md
+++ b/docs/code-quality/c33001.md
@@ -53,7 +53,7 @@ HRESULT foo(bool some_condition)
     }
 }
 ```
-
 ## See also
 
-[TBD](link to be added)
+[C33004](/cpp/code-quality/c33004)
+[C33005](/cpp/code-quality/c33005)
