--- a/docs/code-quality/c33004.md
+++ b/docs/code-quality/c33004.md
@@ -41,7 +41,7 @@ void t2(_Out_ VARIANT* pv)
     // ......
 }
 ```
-
 ## See also
 
-[TBD](link to be added)
+[C33001](/cpp/code-quality/c33001)
+[C33005](/cpp/code-quality/c33005)
