--- a/docs/code-quality/c33005.md
+++ b/docs/code-quality/c33005.md
@@ -49,7 +49,7 @@ void foo()
     VariantClear(&v);   // OK, assumed to be initialized by bar
 }
 ```
-
 ## See also
 
-[TBD](link to be added)
+[C33001](/cpp/code-quality/c33001)
+[C33004](/cpp/code-quality/c33004)
