Update per automatic check results.

--- a/docs/code-quality/c33004.md
+++ b/docs/code-quality/c33004.md
@@ -13,8 +13,8 @@ dev_langs: ["C++"]
 
 > Warning C33004: VARIANT 'var', which is marked as _Out_ was cleared before being initialized (expression 'expr')
 
-This warning is triggered when a VARIANT parameter which is SAL annotated as _Out_ (and therefore is not required
-to be initialized on input) is passed to an API such as VariantClear that expects it to be initialized.
+This warning is triggered when a VARIANT parameter with \_Out\_ SAL annotation, which may not be
+to be initialized on input, is passed to an API such as VariantClear that expects an initialized VARIANT.
 
 ## Example
 
