--- a/docs/code-quality/c33005.md
+++ b/docs/code-quality/c33005.md
@@ -14,7 +14,7 @@ dev_langs: ["C++"]
 > Warning C33005: VARIANT 'var' was provided as an input or input/output parameter but was not initialized (expression 'expr')
 
 This warning is triggered when an uninitialized VARIANT is passed to a function as input only or input/output
-parameter (e.g., a pass-by-refrence parameter without an _Out_ SAL annotation).
+parameter - for example, a pass-by-refrence parameter without an \_Out\_ SAL annotation.
 
 ## Example
 
