--- a/docs/code-quality/c33010.md
+++ b/docs/code-quality/c33010.md
@@ -13,17 +13,15 @@ dev_langs: ["C++"]
 
 > Warning C33010: Unchecked lower bound for enum 'enum' used as index.
 
-This warning is triggered when the upper bound of the enum used as index into an array is checked,
-but the lower bound is not checked.
+This warning is triggered for an enum that is used as an index into an array,
+if the upper bound is checked for its value, but not the lower bound.
 
 ## Example
 
-Code using enumerated types as indexes into arrays will often check for an upper bound
-to ensure the index is not out of range. By default an enum variable is signed, and
-therefore it is important to ensure that it cannot take on a negative value.
-When the enum is subsequently used to index an array, or worse an array of function pointers,
-then a negative enum value would lead to potentially arbitrary memory being read,
-used and/or executed.
+Code using enumerated types as indexes for arrays will often check for the upper bound
+in order to ensure the index is not out of range. Because an enum variable is signed by default,
+it can have a negative value. If it is used as an index into an array of values or an array of function pointers,
+a negative value can allow arbitrary memory to be read, used, or even executed.
 
 ```cpp
 typedef void (*PFN)();
