--- a/docs/code-quality/c33011.md
+++ b/docs/code-quality/c33011.md
@@ -16,12 +16,15 @@ dev_langs: ["C++"]
 This warning is triggered when the lower bound of the enum used as index into an array is checked,
 but the upper bound is not checked.
 
+This warning is triggered for an enum that is used as an index into an array,
+if the lower bound is checked for its value, but not the upper bound.
+
+
 ## Example
 
-Code using enumerated types as indexes into arrays must check the enum value for both lower and
-upper bounds. If the enum value is checked only for the lower bound and used to index an array,
-or worse an array of function pointers, then it can lead to potentially arbitrary memory being read,
-used and/or executed.
+Code that uses enumerated types as indexes for arrays must check the enum value for both lower and
+upper bounds. If the enum value is checked only for the lower bound before used to index into an array of values
+or an array of function pointers, then it can allow arbitrary memory to be read, used, or even executed.
 
 ```cpp
 typedef void (*PFN)();
