--- a/docs/code-quality/c33022.md
+++ b/docs/code-quality/c33022.md
@@ -13,9 +13,8 @@ dev_langs: ["C++"]
 
 > Warning C33022: Potentially incorrect HRESULT usage detected (low confidence)
 
-This is low-confidence warning indicating that HRESULT-returning function returns 0 and there is word
-"FALSE" or "false" somewhere on the line that is eventually compiled to either return or an assignment
-to the variable that will be returned.
+This is a low-confidence warning for functions that return HRESULT, if it there is "FALSE" or "false"
+somewhere along the line that eventually returns it or assigns to a variable that is returned.
 
 ## Example
 
