--- a/docs/code-quality/c33022.md
+++ b/docs/code-quality/c33022.md
@@ -13,7 +13,7 @@ dev_langs: ["C++"]
 
 > Warning C33022: Potentially incorrect HRESULT usage detected (low confidence)
 
-This is a low-confidence warning for functions that return HRESULT, if it there is "FALSE" or "false"
+It is a low-confidence warning for functions that return HRESULT, if there is "FALSE" or "false"
 somewhere along the line that eventually returns it or assigns to a variable that is returned.
 
 ## Example
