Correct errors and make descriptions consistent among related warnings.

--- a/docs/code-quality/c33001.md
+++ b/docs/code-quality/c33001.md
@@ -14,7 +14,7 @@ dev_langs: ["C++"]
 
 > Warning C33001: VARIANT 'var' was cleared when it was uninitialized (expression 'expr')
 
-This warning is triggered when an uninitialized VARIANT is passed into an API such as VariantClear
+This warning is triggered when an uninitialized VARIANT is passed to an API such as VariantClear
 that expects an initialized VARIANT.
 
 ## Example
