--- a/docs/code-quality/c33022.md
+++ b/docs/code-quality/c33022.md
@@ -14,8 +14,8 @@ dev_langs: ["C++"]
 
 > Warning C33022: Potentially incorrect HRESULT usage detected (low confidence)
 
-It is a low-confidence warning for functions that return HRESULT, if there is "FALSE" or "false"
-somewhere along the line that eventually returns it or assigns to a variable that is returned.
+This is low-confidence warning for function that returns HRESULT, if there is "FALSE" or "false"
+somewhere along the line that eventually returns it or assigns it to a variable that is returned.
 
 ## Example
 
