--- a/docs/code-quality/c33004.md
+++ b/docs/code-quality/c33004.md
@@ -14,8 +14,8 @@ dev_langs: ["C++"]
 
 > Warning C33004: VARIANT 'var', which is marked as _Out_ was cleared before being initialized (expression 'expr')
 
-This warning is triggered when a VARIANT parameter with \_Out\_ SAL annotation, which may not be
-to be initialized on input, is passed to an API such as VariantClear that expects an initialized VARIANT.
+This warning is triggered when a VARIANT parameter with \_Out\_ SAL annotation, which may haven't been
+initialized on input, is passed to an API such as VariantClear that expects an initialized VARIANT.
 
 ## Example
 
